force-app/main/default/objects/Order_Scheme_Applied__c/Order_Scheme_Applied__c.object-meta.xml
<CustomObject>
    <label>Order Scheme Applied</label>
    <nameField>
        <displayFormat>OSN-{00000}</displayFormat>
        <label>Order Item Scheme No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Scheme Applied</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>