force-app/main/default/objects/Order_Scheme_Applied__c/fields/Benefit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Amount__c</fullName>
    <label>Benefit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>