force-app/main/default/objects/Order_Scheme_Applied__c/fields/FOC_Giveaway_Product__c.field-meta.xml
<CustomField>
    <fullName>FOC_Giveaway_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FOC Giveaway Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Order Scheme Applied</relationshipLabel>
    <relationshipName>Order_Scheme_Applied</relationshipName>
    <type>Lookup</type>
</CustomField>