force-app/main/default/objects/Order_Scheme_Applied__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>Order_Item__c</referenceTo>
    <relationshipName>Order_Item_Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>