force-app/main/default/objects/Order_Scheme_Applied__c/fields/Order_Request__c.field-meta.xml
<CustomField>
    <fullName>Order_Request__c</fullName>
    <label>Order Request</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>Order_Item_Schemes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>