force-app/main/default/objects/Order_Scheme_Applied__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme</label>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Order Scheme Applied</relationshipLabel>
    <relationshipName>Order_Scheme_Applied</relationshipName>
    <type>Lookup</type>
</CustomField>